--- a/.github/workflows/semgrep.yml
+++ b/.github/workflows/semgrep.yml
@@ -8,7 +8,7 @@ on:
       - main
       - master
   schedule:
-    - cron: '28 7 * * *'  # executa toda madrugada
+    - cron: '28 7 * * *'  # executa diariamente às 7:28
 
 jobs:
   semgrep:
@@ -17,7 +17,7 @@ jobs:
 
     permissions:
       contents: read
-      security-events: write  # necessário para enviar o SARIF
+      security-events: write
       actions: read
 
     steps:
@@ -27,12 +27,17 @@ jobs:
       - name: Instalar o Semgrep
         run: pip install semgrep
 
-      - name: Rodar Semgrep com saída SARIF
+      - name: Rodar Semgrep com regras específicas para Kotlin e segurança
         run: |
-          semgrep scan --config=auto --sarif --output=semgrep.sarif
+          semgrep scan \
+            --config=p/kotlin \
+            --config=p/springboot \
+            --config=p/security-audit \
+            --sarif --output=semgrep.sarif
 
       - name: Upload do resultado SARIF para GitHub Security
         uses: github/codeql-action/upload-sarif@v3
         with:
           sarif_file: semgrep.sarif
+
 
