--- a/.github/workflows/semgrep.yml
+++ b/.github/workflows/semgrep.yml
@@ -8,7 +8,7 @@ on:
       - main
       - master
   schedule:
-    - cron: '28 7 * * *'  # executa diariamente às 7:28
+    - cron: '28 7 * * *'  # executa toda quarta-feira às 04:28 (UTC)
 
 jobs:
   semgrep:
@@ -17,7 +17,7 @@ jobs:
 
     permissions:
       contents: read
-      security-events: write
+      security-events: write  # necessário para enviar o SARIF
       actions: read
 
     steps:
@@ -33,7 +33,8 @@ jobs:
             --config=p/kotlin \
             --config=p/springboot \
             --config=p/security-audit \
-            --sarif --output=semgrep.sarif
+            --sarif \
+            --output=semgrep.sarif
 
       - name: Upload do resultado SARIF para GitHub Security
         uses: github/codeql-action/upload-sarif@v3
