--- a/.github/workflows/semgrep.yml
+++ b/.github/workflows/semgrep.yml
@@ -26,10 +26,14 @@ jobs:
         uses: returntocorp/semgrep-action@v1
         with:
           publishToken: ${{ secrets.SEMGREP_APP_TOKEN }}
-          args: --config=p/kotlin --config=p/springboot --config=p/security-audit --sarif --output=semgrep.sarif
+          config: >
+            p/kotlin
+            p/springboot
+            p/security-audit
 
       - name: Upload do resultado SARIF para GitHub Security
         uses: github/codeql-action/upload-sarif@v3
         with:
           sarif_file: semgrep.sarif
+
 
