--- a/.github/workflows/semgrep.yml
+++ b/.github/workflows/semgrep.yml
@@ -30,10 +30,12 @@ jobs:
             p/kotlin
             p/springboot
             p/security-audit
+          generateSarif: true  # <- ESSA LINHA É ESSENCIAL
 
       - name: Upload do resultado SARIF para GitHub Security
         uses: github/codeql-action/upload-sarif@v3
         with:
           sarif_file: semgrep.sarif
+
 
 
