--- a/.github/workflows/semgrep.yml
+++ b/.github/workflows/semgrep.yml
@@ -1,17 +1,15 @@
-name: Semgrep CI
+name: Semgrep
 
 on:
   push:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
-  schedule:
-    - cron: '28 7 * * *'
   workflow_dispatch:
 
 jobs:
   semgrep:
-    name: Run Semgrep CI on Kotlin + Spring Boot
+    name: Run Semgrep with auto-config
     runs-on: ubuntu-latest
 
     permissions:
@@ -22,20 +20,17 @@ jobs:
       - name: Checkout do código
         uses: actions/checkout@v4
 
-      - name: Rodar Semgrep com CI + SARIF
-        uses: returntocorp/semgrep-action@v1
-        with:
-          publishToken: ${{ secrets.SEMGREP_APP_TOKEN }}
-          config: >
-            p/kotlin
-            p/springboot
-            p/security-audit
-          generateSarif: true  # <- ESSA LINHA É ESSENCIAL
+      - name: Instalar Semgrep
+        run: pip install semgrep
 
-      - name: Upload do resultado SARIF para GitHub Security
+      - name: Rodar Semgrep com auto-config e saída SARIF
+        run: semgrep scan --config=auto --sarif --output=semgrep.sarif
+
+      - name: Upload do resultado SARIF
         uses: github/codeql-action/upload-sarif@v3
         with:
           sarif_file: semgrep.sarif
+
 
 
 
