--- a/.github/workflows/zap_scan.yml
+++ b/.github/workflows/zap_scan.yml
@@ -1,22 +1,19 @@
-name: ZAP Baseline Scan
-
-on:
-  push:
-    branches:
-      - main
-  workflow_dispatch:
+on: [push]
 
 jobs:
   zap_scan:
     runs-on: ubuntu-latest
-
+    name: Scan the webapplication
     steps:
-    - name: Checkout repositório
-      uses: actions/checkout@v3
-
-    - name: Executar ZAP Baseline Scan
-      uses: zaproxy/action-baseline@v0.9.0
-      with:
-        target: 'http://localhost:8080'
-        docker_name: 'owasp/zap2docker-weekly'
-        fail_action: false
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          ref: master
+      - name: ZAP Scan
+        uses: zaproxy/action-full-scan@v0.12.0
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          docker_name: 'ghcr.io/zaproxy/zaproxy:stable'
+          target: 'https://www.zaproxy.org/'
+          rules_file_name: '.zap/rules.tsv'
+          cmd_options: '-a'
