--- a/.github/workflows/sast-semgrep.yml
+++ b/.github/workflows/sast-semgrep.yml
@@ -1,4 +1,4 @@
-name: SAST - Semgrep (Kotlin/Spring) - OSS
+name: SAST - Semgrep (Kotlin/Spring)
 
 on:
   pull_request:
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: read
-      security-events: write
+      security-events: write   # publicar SARIF na aba Security
       pull-requests: write
 
     steps:
@@ -21,7 +21,6 @@ jobs:
         uses: returntocorp/semgrep-action@v1
         with:
           entryPoint: scan
-          # Gere o SARIF diretamente
           args: >-
             --config p/owasp-top-ten
             --config p/secrets
@@ -31,9 +30,21 @@ jobs:
             --sarif
             --output semgrep.sarif
             --metrics=off
-          # NÃO defina SEMGREP_APP_TOKEN aqui
+        # Importante: NÃO definir SEMGREP_APP_TOKEN aqui.
+        # (Se quiser usar Semgrep Cloud, fazemos outro YAML.)
 
       - name: Upload SARIF to GitHub Security
         uses: github/codeql-action/upload-sarif@v3
         with:
           sarif_file: semgrep.sarif
+
+      # Gate opcional por severidade (falha se houver "ERROR" no SARIF)
+      - name: Gate por severidade (ERROR)
+        run: |
+          if [ -f semgrep.sarif ]; then
+            ERRORS=$(jq '[.runs[].results[] | select(.level=="error")] | length' semgrep.sarif)
+            echo "Findings severidade ERROR: ${ERRORS}"
+            test "${ERRORS}" -gt 0 && exit 1 || exit 0
+          else
+            echo "semgrep.sarif não encontrado"; exit 1
+          fi
