--- a/.github/workflows/semgrep.yml
+++ b/.github/workflows/semgrep.yml
@@ -25,9 +25,9 @@ permissions:
 jobs:
   semgrep:
     permissions:
-      contents: read # for actions/checkout to fetch code
-      security-events: write # for github/codeql-action/upload-sarif to upload SARIF results
-      actions: read # only required for a private repository by github/codeql-action/upload-sarif to get the Action run status
+      contents: read           # for actions/checkout to fetch code
+      security-events: write   # for github/codeql-action/upload-sarif to upload SARIF results
+      actions: read            # only required for a private repository by github/codeql-action/upload-sarif to get the Action run status
     name: Scan
     runs-on: ubuntu-latest
     steps:
@@ -35,15 +35,18 @@ jobs:
       - uses: actions/checkout@v4
 
       # Scan code using project's configuration on https://semgrep.dev/manage
+      # Gera SARIF (scan com policy) e aplica o gate da policy (ci)
       - uses: returntocorp/semgrep-action@fcd5ab7459e8d91cb1777481980d1b18b4fc6735
         with:
           publishToken: ${{ secrets.SEMGREP_APP_TOKEN }}
-          publishDeployment: ${{ secrets.SEMGREP_DEPLOYMENT_ID }}
           generateSarif: "1"
+          # Opcional: force o gate em push/pull_request (padrão já cobre PR)
+          # auditOn: "push,pull_request"
 
-      # Upload SARIF file generated in previous step
+      # Upload SARIF file generated in previous step (mesmo se o gate falhar)
       - name: Upload SARIF file
+        if: always()
         uses: github/codeql-action/upload-sarif@v3
         with:
           sarif_file: semgrep.sarif
-        if: always()
+
