--- a/.github/workflows/dast-zap-full.yml
+++ b/.github/workflows/dast-zap-full.yml
@@ -1,4 +1,4 @@
-name: DAST - ZAP Full
+name: DAST - ZAP Full (localhost)
 
 on:
   workflow_dispatch:
@@ -14,6 +14,12 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Make gradlew executable (and fix CRLF if any)
+        run: |
+          test -f gradlew || { echo "gradlew não encontrado"; exit 1; }
+          chmod +x ./gradlew
+          sed -i 's/\r$//' ./gradlew
+
       - name: Setup JDK
         uses: actions/setup-java@v4
         with:
@@ -22,8 +28,7 @@ jobs:
 
       - name: Build (Gradle)
         run: |
-          ./gradlew --version || ./gradlew wrapper
-          ./gradlew bootJar -x test
+          bash ./gradlew bootJar -x test
 
       - name: Start app (localhost:8080)
         run: |
@@ -46,7 +51,7 @@ jobs:
           elif docker run --rm --network bridge curlimages/curl:8.9.1 -sSf "$T2" >/dev/null; then
             echo "DAST_TARGET=$T2" >> $GITHUB_ENV
           else
-            echo "Não consegui alcançar a app a partir de um container. Verifique se está ouvindo em 0.0.0.0:8080."; 
+            echo "Não consegui alcançar a app a partir de um container. Verifique se está ouvindo em 0.0.0.0:8080."
             echo "Log da app:"; tail -n 200 /tmp/app.log || true
             exit 1
           fi
@@ -71,7 +76,7 @@ jobs:
           echo "High findings: $HIGHS"
           if [ "$HIGHS" -gt 0 ]; then exit 1; fi
 
-      - name: Upload reports + app log
+      - name: Upload reports
         if: always()
         uses: actions/upload-artifact@v4
         with:
@@ -81,4 +86,3 @@ jobs:
             zap-full.md
             zap-full.json
             /tmp/app.log
-
